--- a/configure.ac
+++ b/configure.ac
@@ -40,6 +40,7 @@ SAC_TOOL_CC
 AC_GNU_SOURCE
 AC_PROG_INSTALL
 AC_PROG_CPP
+AC_PROG_CC_STDC
 AC_CHECK_PROG(ETAGS, etags, etags, echo)
 AC_CHECK_TOOL(AR, ar, ar)
 AC_CHECK_TOOL(LD, ld, ld)
